objects/Account.object
<CustomObject>
    <fields>
        <fullName>AUM_Size_of_Business__c</fullName>
        <label>AUM Size of Business</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AUM_with_ABSA_Product__c</fullName>
        <label>AUM with ABSA Product</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>AccNumber__c</fullName>
        <description>Account Number used for importing Clients</description>
        <inlineHelpText>Account Number used for importing Clients</inlineHelpText>
        <label>AccNumber</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Advisor_Notes__c</fullName>
        <description>Wealth - Any further details as obtained by advisor</description>
        <label>Advisor Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Attitude_to_Risk_Rating__c</fullName>
        <description>Wealth - What is the clients attitude to risk. Scale None – High Risk Profile</description>
        <label>Attitude to Risk Rating</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Low Risk Profile</fullName>
                </value>
                <value>
                    <fullName>Low - Medium Risk Profile</fullName>
                </value>
                <value>
                    <fullName>Medium Risk Profile</fullName>
                </value>
                <value>
                    <fullName>Medium - High Risk Profile</fullName>
                </value>
                <value>
                    <fullName>High Risk Profile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BEE_Status__c</fullName>
        <label>BEE Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Level 1</fullName>
                </value>
                <value>
                    <fullName>Level 2</fullName>
                </value>
                <value>
                    <fullName>Level 3</fullName>
                </value>
                <value>
                    <fullName>Level 4</fullName>
                </value>
                <value>
                    <fullName>Level 5</fullName>
                </value>
                <value>
                    <fullName>Level 6</fullName>
                </value>
                <value>
                    <fullName>Non compliant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BEE__c</fullName>
        <label>BEE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>BIC_Code__c</fullName>
        <description>BIC Code, currently populated from SDS.</description>
        <label>BIC Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BIC_Description__c</fullName>
        <description>BIC Description, currently populated from SDS.</description>
        <label>BIC Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BO__c</fullName>
        <label>BO%</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BWO__c</fullName>
        <label>BWO %</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Area__c</fullName>
        <description>Wealth - Dictates what business area the relationship was originally in i.e. CIB or Wealth</description>
        <formula>CASE(RecordTypeId, &apos;01224000000TOXu&apos;, &apos;Wealth&apos;, &apos;01224000000TOXv&apos;, &apos;Wealth&apos;, &apos;01224000000TOXw&apos;, &apos;Wealth&apos;, &apos;01224000000TOXx&apos;, &apos;Wealth&apos;,&apos;CIB&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIB_Top_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CIB Top Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CIF_Data__c</fullName>
        <description>RN - CloudSmiths - Create a hyperlink that will call the CIF Data page that uses the REST API to pull CIF data based on CIF code on the Account record</description>
        <formula>IF(
LEFT(CIF__c, Find(&quot;;&quot;, CIF__c)-1) != &quot;&quot;,
HYPERLINK(&quot;/apex/ADAPT360?queryType=cif&amp;regId=&quot; &amp; LEFT(CIF__c,Find(&quot;;&quot;, CIF__c)-1),&quot;View CIF Data&quot;),
IF(CIF__c!=&quot;&quot; &amp;&amp; Find(&quot;;&quot;, CIF__c)=0,
HYPERLINK(&quot;/apex/ADAPT360?queryType=cif&amp;regId=&quot; &amp; CIF__c,
&quot;View CIF Data&quot;
),&quot;View CIF Data: Not Available without a CIF number&quot;)
)</formula>
        <label>CIF Data</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CIF__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Wealth - This field (will be)is used for integration with PMP.</description>
        <label>CIF</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Call_Report_Count__c</fullName>
        <label>Call Report Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Call_Report_Last_Logged_Date__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Call Report Last Logged Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CaseSafe_ID__c</fullName>
        <description>18 Character ID</description>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CaseSafe ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Count__c</fullName>
        <label>Case Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Country__c</fullName>
        <label>Coverage Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua and Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius and Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia and Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
                <value>
                    <fullName>Bouvet Island</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Description__c</fullName>
        <label>Client Objectives</label>
        <length>35000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Group__c</fullName>
        <label>Client Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Client</fullName>
                </value>
                <value>
                    <fullName>Joint &amp; Sev - Namib/Leso/Swazi</fullName>
                </value>
                <value>
                    <fullName>Joint And Several Client</fullName>
                </value>
                <value>
                    <fullName>Non-Individual Client</fullName>
                </value>
                <value>
                    <fullName>Partnership Client</fullName>
                </value>
                <value>
                    <fullName>Sole Trader Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Hierarchy_ID__c</fullName>
        <description>Link to Oneview Client Hierarchy for Markets Institutional Clients</description>
        <externalId>true</externalId>
        <label>Client Hierarchy ID</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <description>Client ID used for RoA Clients - NOT the Local country registration number</description>
        <externalId>true</externalId>
        <label>Client ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Client_Region__c</fullName>
        <label>Client Region</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Client_Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Eastern Cape</fullName>
                </value>
                <value>
                    <fullName>Free State</fullName>
                </value>
                <value>
                    <fullName>Gauteng</fullName>
                </value>
                <value>
                    <fullName>Kwazulu-Natal</fullName>
                </value>
                <value>
                    <fullName>Limpopo</fullName>
                </value>
                <value>
                    <fullName>Mpumalanga</fullName>
                </value>
                <value>
                    <fullName>Northern Cape</fullName>
                </value>
                <value>
                    <fullName>Northwest</fullName>
                </value>
                <value>
                    <fullName>Western Cape</fullName>
                </value>
                <value>
                    <fullName>Bloemfontein</fullName>
                </value>
                <value>
                    <fullName>Pretoria</fullName>
                </value>
                <value>
                    <fullName>Durban</fullName>
                </value>
                <value>
                    <fullName>Sandton</fullName>
                </value>
                <value>
                    <fullName>Family Office</fullName>
                </value>
                <value>
                    <fullName>Unlinked</fullName>
                </value>
                <value>
                    <fullName>Cape Town</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_Status__c</fullName>
        <label>Client Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Linked</fullName>
                </value>
                <value>
                    <fullName>Unlinked</fullName>
                </value>
                <value>
                    <fullName>Current Relationship</fullName>
                    <isActive>false</isActive>
                    <label>Current Relationship</label>
                </value>
                <value>
                    <fullName>Developing Relationship</fullName>
                    <isActive>false</isActive>
                    <label>Developing Relationship</label>
                </value>
                <value>
                    <fullName>Potential Relationship</fullName>
                    <isActive>false</isActive>
                    <label>Potential Relationship</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_type__c</fullName>
        <label>Client Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Client</fullName>
                </value>
                <value>
                    <fullName>Potential Client</fullName>
                </value>
                <value>
                    <fullName>Developing Relationship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Detail_Type__c</fullName>
        <label>Contact Detail Type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contacts__c</fullName>
        <label>Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Corridor__c</fullName>
        <formula>CASE( Site , 
&quot;APAC&quot;, &quot;APAC EXCL CHINA&quot;, 
&quot;AUSTRALIA&quot;, &quot;APAC EXCL CHINA&quot; , 
&quot;AUSTRIA&quot;, &quot;EUROPE&quot; , 
&quot;BAHRAIN&quot;, &quot;UAE&quot; , 
&quot;BEGIUM&quot; ,&quot;EUROPE&quot; , 
&quot;BERMUDA&quot;,&quot;USA&quot; , 
&quot;BRAZIL&quot;,&quot;USA&quot; , 
&quot;BRITISH VIRGIN ISLANDS&quot;,&quot;USA&quot; , 
&quot;CANADA&quot;, &quot;UK&quot;, 
&quot;CAYMAN ISLANDS&quot;,&quot;USA&quot; , 
&quot;CHILE&quot;, &quot;USA&quot; , 
&quot;CHINA&quot;, &quot;CHINA&quot; , 
&quot;COLOMBIA&quot;,&quot;USA&quot; , 
&quot;DENMARK&quot;,&quot;UK&quot; , 
&quot;DUBAI&quot;, &quot;UAE&quot; , 
&quot;EU&quot;, &quot;EUROPE&quot; , 
&quot;EUROPE&quot;, &quot;EUROPE&quot;, 
&quot;FINLAND&quot;, &quot;UK&quot; , 
&quot;FRANCE&quot;, &quot;EUROPE&quot; , 
&quot;GERMANY&quot;,&quot;EUROPE&quot; , 
&quot;GREECE&quot;, &quot;EUROPE&quot; , 
&quot;HONG KONG&quot;,&quot;CHINA&quot; , 
&quot;HUNGARY&quot;, &quot;EUROPE&quot; , 
&quot;INDIA&quot;, &quot;APAC EXCL CHINA&quot; , 
&quot;INDONESIA&quot;,&quot;APAC EXCL CHINA&quot; , 
&quot;IRELAND&quot;, &quot;UK&quot; , 
&quot;ISRAEL&quot;, &quot;UK&quot; , 
&quot;ITALY&quot;, &quot;EUROPE&quot; , 
&quot;JAPAN&quot;, &quot;APAC EXCL CHINA&quot; , 
&quot;Korea&quot;, &quot;APAC EXCL CHINA&quot; , 
&quot;KOREA, REPUBLIC OF &quot;, &quot;APAC EXCL CHINA&quot; , 
&quot;KUWAIT&quot;, &quot;UK&quot; , 
&quot;LEBANON&quot;,&quot;UAE&quot; , 
&quot;LITHUANIA&quot;,&quot;EUROPE&quot; , 
&quot;MALAYSIA&quot;,&quot;APAC EXCL CHINA&quot; , 
&quot;NETHERLANDS&quot;,&quot;EUROPE&quot; , 
&quot;NORWAY&quot;, &quot;UK&quot; , 
&quot;OMAN&quot;, &quot;UAE&quot; , 
&quot;PORTUGAL&quot;, &quot;EUROPE&quot; , 
&quot;QATAR&quot;, &quot;UAE&quot; , 
&quot;RUSSIA&quot;, &quot;UK&quot; , 
&quot;SAUDI ARABIA&quot;,&quot;UAE&quot; , 
&quot;SERBIA&quot;, &quot;EUROPE&quot; , 
&quot;SINGAPORE&quot;,&quot;APAC EXCL CHINA&quot; , 
&quot;SPAIN&quot;, &quot;EUROPE&quot; , 
&quot;SWEDEN&quot;, &quot;UK&quot; , 
&quot;SWITZERLAND&quot;,&quot;UK&quot; , 
&quot;TAIWAN&quot;, &quot;APAC EXCL CHINA&quot; , 
&quot;TAIWAN , PROVINCE OF CHINA&quot;,&quot;CHINA&quot; , 
&quot;THAIWAN&quot;, &quot;APAC EXCL CHINA&quot; , 
&quot;TURKEY&quot;, &quot;EUROPE&quot; , 
&quot;UAE&quot;, &quot;UAE&quot; , 
&quot;UK&quot;, &quot;UK&quot; , 
&quot;USA&quot;, &quot;USA&quot; , 
&quot;VIETNAM&quot;, &quot;APAC EXCL CHINA&quot; , 
&quot;&quot;)</formula>
        <label>Corridor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Incorporation__c</fullName>
        <label>Country of Incorporation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_of_Operation__c</fullName>
        <description>Country Name</description>
        <label>Country of Operation</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coverage_country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup of the Coverage country custom object</description>
        <label>Coverage Country</label>
        <referenceTo>Coverage_Country__c</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Credit_Group__c</fullName>
        <description>Placeholder for credit group / countertyparty group id from SDS system (defined as groupID within the XML from SDS)</description>
        <label>Credit Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Established__c</fullName>
        <label>Date Established</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Diamond_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This filed is used by the CSC to identify important cases</description>
        <label>Diamond Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <description>Used for inserting clients - CIB,BB etc. - NOT FOR PRODUCTION! Temporary field for uploading.</description>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BB</fullName>
                </value>
                <value>
                    <fullName>CIB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>EDC_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EDC Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EMDW__c</fullName>
        <description>Link this field to the Emerging Markets Data Warehouse Unique Client ID for all Africa Countries</description>
        <externalId>true</externalId>
        <label>EMDW</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ESP_ID__c</fullName>
        <label>ESP ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ExternalAccountId__c</fullName>
        <externalId>true</externalId>
        <label>ExternalAccountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Credit_Rating__c</fullName>
        <label>External Credit Rating</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FINRA_Status__c</fullName>
        <label>FINRA Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financial_Year_End_Month__c</fullName>
        <label>Financial Year End</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>January</fullName>
                </value>
                <value>
                    <fullName>February</fullName>
                </value>
                <value>
                    <fullName>March</fullName>
                </value>
                <value>
                    <fullName>April</fullName>
                </value>
                <value>
                    <fullName>May</fullName>
                </value>
                <value>
                    <fullName>June</fullName>
                </value>
                <value>
                    <fullName>July</fullName>
                </value>
                <value>
                    <fullName>August</fullName>
                </value>
                <value>
                    <fullName>September</fullName>
                </value>
                <value>
                    <fullName>October</fullName>
                </value>
                <value>
                    <fullName>November</fullName>
                </value>
                <value>
                    <fullName>December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Financial_Year_End__c</fullName>
        <label>Financial Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formatted_Call_Report_Last_Logged_Date__c</fullName>
        <formula>DATEVALUE( Call_Report_Last_Logged_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Formatted Call Report Last Logged Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Frequency__c</fullName>
        <label>Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Bi-Annually</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Global_Parent_Country__c</fullName>
        <label>Global Parent Country</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Parent_Key__c</fullName>
        <description>This field stores the Global Parent Key from MyMI for a Global Parent.</description>
        <externalId>true</externalId>
        <label>Global Parent Key</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Global_Parent_RD__c</fullName>
        <description>The owner of the Global account</description>
        <label>Global Parent RD</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Global Parent</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Global_corporate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if the organisation is a global corporate entity</description>
        <label>Global Corporate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goals_Summary__c</fullName>
        <description>Wealth - What are the end goals for the client i.e. Wedding, Retirement</description>
        <label>Goals Summary</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Early Retirement</fullName>
                </value>
                <value>
                    <fullName>Wedding</fullName>
                </value>
                <value>
                    <fullName>Child Education</fullName>
                </value>
                <value>
                    <fullName>Dream Holiday</fullName>
                </value>
                <value>
                    <fullName>Home Purchase</fullName>
                </value>
                <value>
                    <fullName>Other Significant Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hub_F__c</fullName>
        <description>Owner&apos;s hub</description>
        <formula>TEXT(Owner.Hub__c)</formula>
        <label>Hub</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ID_Type__c</fullName>
        <description>Identification Type</description>
        <label>ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>IDENTITY DOCUMENT</fullName>
                </value>
                <value>
                    <fullName>NO REGISTRATION NUMBER</fullName>
                </value>
                <value>
                    <fullName>PASSPORT</fullName>
                </value>
                <value>
                    <fullName>REGISTRATION NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSE_Main_Sector__c</fullName>
        <label>JSE Main Sector</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Oil &amp; Gas</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Basic Resources</fullName>
                </value>
                <value>
                    <fullName>Construction &amp; Materials</fullName>
                </value>
                <value>
                    <fullName>Industrial Goods &amp; Services</fullName>
                </value>
                <value>
                    <fullName>Automobiles &amp; Parts</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Beverage</fullName>
                </value>
                <value>
                    <fullName>Personal &amp; Household Goods</fullName>
                </value>
                <value>
                    <fullName>Health Care</fullName>
                </value>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Leisure</fullName>
                </value>
                <value>
                    <fullName>Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Utilities</fullName>
                </value>
                <value>
                    <fullName>Banks</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Real Estate</fullName>
                </value>
                <value>
                    <fullName>Financial Services</fullName>
                </value>
                <value>
                    <fullName>Technology</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSE_Sector__c</fullName>
        <label>JSE Sector</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>JSE_Main_Sector__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Oil &amp; Gas Producers</fullName>
                </value>
                <value>
                    <fullName>Oil Equipment, Services &amp; Distribution</fullName>
                </value>
                <value>
                    <fullName>Alternative Energy</fullName>
                </value>
                <value>
                    <fullName>Chemicals</fullName>
                </value>
                <value>
                    <fullName>Forestry &amp; Paper</fullName>
                </value>
                <value>
                    <fullName>Industrial Metals &amp; Mining</fullName>
                </value>
                <value>
                    <fullName>Mining</fullName>
                </value>
                <value>
                    <fullName>Construction &amp; Materials</fullName>
                </value>
                <value>
                    <fullName>Aerospace &amp; Defence</fullName>
                </value>
                <value>
                    <fullName>General Industrials</fullName>
                </value>
                <value>
                    <fullName>Electronic &amp; Electrical Equipment</fullName>
                </value>
                <value>
                    <fullName>Industrial Engineering</fullName>
                </value>
                <value>
                    <fullName>Industrial Transportation</fullName>
                </value>
                <value>
                    <fullName>Support Services</fullName>
                </value>
                <value>
                    <fullName>Automobiles &amp; Parts</fullName>
                </value>
                <value>
                    <fullName>Beverages</fullName>
                </value>
                <value>
                    <fullName>Food Producers</fullName>
                </value>
                <value>
                    <fullName>Household Goods &amp; Home Construction</fullName>
                </value>
                <value>
                    <fullName>Leisure Goods</fullName>
                </value>
                <value>
                    <fullName>Personal Goods</fullName>
                </value>
                <value>
                    <fullName>Tobacco</fullName>
                </value>
                <value>
                    <fullName>Health Care Equipment &amp; Services</fullName>
                </value>
                <value>
                    <fullName>Pharmaceuticals &amp; Biotechnology</fullName>
                </value>
                <value>
                    <fullName>Food &amp; Drug Retailers</fullName>
                </value>
                <value>
                    <fullName>General Retailers</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Travel &amp; Leisure</fullName>
                </value>
                <value>
                    <fullName>Fixed Line Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Mobile Telecommunications</fullName>
                </value>
                <value>
                    <fullName>Electricity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>JSE__c</fullName>
        <label>JSE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>KI_Ref__c</fullName>
        <label>KI Ref</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KYC_d_by_BAGL__c</fullName>
        <label>KYC&apos;d by BAGL?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_CSM_Call_Report__c</fullName>
        <description>Date of which the Core Report was run by the RSM</description>
        <inlineHelpText>Last time a Call Report was created by a Relationship Support Manager against this Organisation</inlineHelpText>
        <label>Last CSM Call Report</label>
        <type>Date</type>
    </fields>
</CustomObject>